<resources>
    <string name="app_name">CookAid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduction">
        Using Cook aid is as easy as using a Bandaid! By following the simple steps below, you will become a masterful chef.
    </string>
    <string name="homeNav">
        Press the Home button on the navigation bar to go back to Cook Aid\'s home page
    </string>
    <string name="searchNav">
        Press the Search button on the navigation bar to query your existing recipes
    </string>
    <string name="addNav">
        Press the Add button on the navigation bar to access the recipe editor
    </string>
    <string name="instructionsNav">
        Press the Instructions button on the navigation bar to visit this page at any time for help
    </string>

    <string-array name = "cuisines">
        <item> Caribbean</item>
        <item> Chinese</item>
        <item> French</item>
        <item> Greek </item>
        <item> Indian </item>
        <item> Italian </item>
    </string-array>

    <string-array name = "type">
        <item> Main</item>
        <item> Appetizer</item>
        <item> Dessert</item>
        <item> Snack </item>
        <item> Drink </item>
    </string-array>


</resources>
